refactor: organize code base

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,7 @@
     "noEmit": true,
     "jsx": "react"
   },
-  "include": ["./src"]
+  // inlucude ts and tsx
+  "include": ["src/**/*.ts", "src/**/*.tsx"],
+  "exclude": ["./node_modules"]
 }
