--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,9 @@
 {
   "trailingComma": "all",
-  "tabWidth": 2,
   "semi": true,
   "singleQuote": true,
   "useTabs": false,
   "jsxSingleQuote": true,
-  "arrowParens": "avoid",
+  "arrowParens": "always",
   "bracketSpacing": true
 }
